# anpr_project

./: .env  .gitignore  config.py  licensePlatesDatabase.db  main.py  pyproject.toml  sqlDB.py  training.ipynb
core/: detection.py  ocr.py  storing.py
core/storage/: DB.py  json.py
