[project]
name = "anpr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvzone>=1.6.1",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "streamlit>=1.52.2",
    "ultralytics>=8.3.250",
]
