[project]
name = "anpr-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "cvzone>=1.6.1",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "opencv-python>=4.12.0.88",
    "pymysql>=1.1.2",
    "pytesseract>=0.3.13",
    "streamlit>=1.52.2",
    "ultralytics>=8.3.250",
]
